[gd_scene load_steps=2 format=3 uid="uid://bdy7iqesfkot3"]

[ext_resource type="Script" uid="uid://bkg37y1ig114o" path="res://StartScreen.gd" id="1_hm334"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hm334")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartServerButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Server"

[node name="Divider" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPAddressLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter IP to connect to"

[node name="ConnectToServerButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Connect to Server"

[node name="Divider2" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start Game!"

[connection signal="pressed" from="VBoxContainer/StartServerButton" to="." method="_on_start_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConnectToServerButton" to="." method="_on_connect_to_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
